--- a/build.gradle
+++ b/build.gradle
@@ -34,17 +34,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.springframework.ai:spring-ai-jsoup-document-reader'
+	implementation 'org.mapstruct:mapstruct:1.6.3'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 //	testImplementation 'org.springframework.ai:spring-ai-spring-boot-testcontainers'
 	testImplementation 'org.testcontainers:junit-jupiter'
 //	testImplementation 'org.testcontainers:postgresql'
+	testImplementation 'org.projectlombok:lombok'
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
