--- a/build.gradle
+++ b/build.gradle
@@ -44,10 +44,10 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 //	testImplementation 'org.springframework.ai:spring-ai-spring-boot-testcontainers'
 	testImplementation 'org.testcontainers:junit-jupiter'
-//	testImplementation 'org.testcontainers:postgresql'
+	testImplementation 'org.testcontainers:postgresql'
 	testImplementation 'org.projectlombok:lombok'
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
