--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 	testImplementation 'org.testcontainers:postgresql'
 	testImplementation 'org.projectlombok:lombok'
 
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
@@ -61,4 +63,19 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.register('integrationTest', Test) {
+	description = 'Runs integration tests.'
+	group = 'verification'
+
+	useJUnitPlatform()
+
+	filter {
+		includeTestsMatching "*IT"
+	}
+
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
 }
