--- a/src/main/resources/db/changelog/changelog.yaml
+++ b/src/main/resources/db/changelog/changelog.yaml
@@ -1,3 +1,9 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/changelog-001.yaml
+      file: db/changelog/changelog-product.yaml
+  - include:
+      file: db/changelog/changelog-shop.yaml
+  - include:
+      file: db/changelog/changelog-user.yaml
+  - include:
+      file: db/changelog/changelog-tracked-item.yaml
