Added PriceMonitoringScheduler and fill the method monitorPricesTask() except notification part.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ spring:
   application:
     name: price_monitoring_system
 
+  main:
+    web-application-type: none
+
   jpa:
     show-sql: true
     open-in-view: false
