Fixed a little problems. Now it works.

--- a/src/main/resources/db/changelog/changelog.yaml
+++ b/src/main/resources/db/changelog/changelog.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: db/changelog/changelog-user.yaml
   - include:
       file: db/changelog/changelog-tracked-item.yaml
+  - include:
+      file: db/changelog/changelog-item-snapshot.yaml
