--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,5 +12,13 @@ services:
     volumes:
       - data:/var/lib/postgresql/data
 
+  app:
+    build: ./
+    container_name: price_monitoring_app
+    env_file:
+      - .env
+    depends_on:
+      - db
+
 volumes:
   data:
