--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,7 +24,7 @@ spring:
       ddl-auto: none
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/price_monitoring_db?options=-c%20timezone=UTC
+    url: jdbc:postgresql://db:5432/price_monitoring_db?options=-c%20timezone=UTC
     username: postgres
     password: postgres
     hikari:
