--- a/src/main/resources/db/changelog/changelog-product.yaml
+++ b/src/main/resources/db/changelog/changelog-product.yaml
@@ -35,7 +35,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: available
-                  type: BOOLEAN
+                  name: availability
+                  type: VARCHAR(255)
                   constraints:
                     nullable: false
