Added concurrent product scraping.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -38,6 +38,12 @@ spring:
     change-log: classpath:db/changelog/changelog.yaml
     enabled: true
 
+paging:
+  page-size: 100
+
+threads:
+  count: 10
+
 scraping:
   user-agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
   timeout: 5000
